@@ -37,8 +37,7 @@ public class TenantServiceHelper {
 
     } catch (IntrospectionException exception) {
       throw new InternalServerErrorException(
-          String.format("Could not obtain method properties of %s", queryValue.toString()),
-          exception);
+          "Could not obtain method properties of %s".formatted(queryValue.toString()), exception);
     }
   }
 
@@ -51,7 +50,7 @@ public class TenantServiceHelper {
       }
     } catch (Exception exception) {
       throw new InternalServerErrorException(
-          String.format("Could not obtain method key value pairs of %s", queryValue.toString()),
+          "Could not obtain method key value pairs of %s".formatted(queryValue.toString()),
           exception);
     }
   }
