@@ -19,7 +19,7 @@ import java.io.IOException;
 import java.io.Reader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.HashSet;
@@ -272,7 +272,7 @@ public class ConsultantImportService {
 
     try {
       Files.write(
-          Paths.get(protocolFile),
+          Path.of(protocolFile),
           (message + NEWLINE_CHAR).getBytes(StandardCharsets.UTF_8),
           StandardOpenOption.CREATE,
           StandardOpenOption.APPEND);
